@@ -1,4 +1,8 @@
 $Id: CHANGES 64 2006-02-05 02:19:26Z themightydude $
+TheMightyDude (21 April 2006)
+--------------------------------------
+[1470569] Num of moves moved in traderoute not showing FIXED.
+
 TheMightyDude (20 April 2006)
 --------------------------------------
 Added all the missing Folders and the contents in them.
